<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YHaileContactsListApp</string>
    <string name="action_settings">Settings</string>
    <string name="contact">Contact</string>
    <string name="defaultContactAmount">0</string>
    <string name="contactAmountLabel">   contact(s) entered</string>
    <string name="firstName">First Name: </string>
    <string name="cellPhone">Cell Phone: </string>
    <string name="lastName">Last Name: </string>
    <string name="workPhone">Work Phone: </string>
    <string name="email">Email: </string>
    <string name="comment">Comment(s): </string>
    <string name="reset">RESET</string>
    <string name="submit">SUBMIT</string>
    <string name="show_subtitle">Show Subtitle</string>
  <string name="hide_subtitle">Hide Subtitle</string> 
  <string name="subtitle">Subtitle</string>

</resources>
