<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@color/light_blue">

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="4dp"
            android:text="@string/firstName" 
            android:textColor="#000033" 
            android:focusable="false"/>

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:ems="10" 
            android:nextFocusForward="@+id/editText2"
			android:inputType="text">
            <requestFocus />
        </EditText>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="4dp"
            android:text="@string/lastName" 
 			android:textColor="#000033"
 			android:focusable="false" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:ems="10" 
            android:imeOptions="actionNext"
            android:inputType="text"        
            android:nextFocusForward="@+id/editText3" />
        
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="4dp"
            android:text="@string/email" 
 			android:textColor="#000033"
 			android:focusable="false" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:ems="10"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"           
            android:nextFocusForward="@+id/editText4" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="4dp"
            android:text="@string/cellPhone" 
 			android:textColor="#000033"
 			android:focusable="false" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:ems="10"
            android:imeOptions="actionNext"
            android:inputType="phone"            
            android:nextFocusForward="@+id/editText5" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="4dp"
            android:text="@string/workPhone" 
 			android:textColor="#000033"
 			android:focusable="false" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:ems="10"
            android:imeOptions="actionNext"
            android:inputType="phone"            
            android:nextFocusForward="@+id/editText6" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="4dp"
            android:text="@string/comment" 
 			android:textColor="#000033"
 			android:focusable="false" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:ems="10"
            android:gravity="top|left"
            android:lines="3"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"/>

    </TableRow>
</TableLayout>